--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -32,7 +32,18 @@
                 <div class="aside-right">
                     <a class="btn btn-border" href="#">
                         <div class="icon">
-                            <img src="/assets/img/Group 2.13.png" alt="Group 2.13">
+                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <circle class="svg-item" cx="10.5" cy="3.5" r="3.05" stroke="#20B1F9"
+                                    stroke-width="0.9" />
+                                <rect class="svg-item" x="0.45" y="7.45" width="6.1" height="6.1" stroke="#20B1F9"
+                                    stroke-width="0.9" />
+                                <path class="svg-item" d="M7.72812 13.55L10.5 8.00623L13.2719 13.55H7.72812Z"
+                                    stroke="#20B1F9" stroke-width="0.9" />
+                                <path class="svg-item"
+                                    d="M0.636396 3.5L3.5 0.636396L6.3636 3.5L3.5 6.3636L0.636396 3.5Z" stroke="#20B1F9"
+                                    stroke-width="0.9" />
+                            </svg>
                         </div>
                         <div class="text">
                             <p class="desc-1">Build with Enigma</p>
@@ -136,7 +147,19 @@
                         </a>
                         <a class="btn btn-border" href="#">
                             <div class="icon">
-                                <img src="/assets/img/copy.svg" alt="copy">
+                                <svg width="15" height="14" viewBox="0 0 15 14" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="svg-item"
+                                        d="M10.1424 12.6838H0.496338V0.914917L12.5901 0.914917V9.53394" stroke="#20B1F9"
+                                        stroke-width="0.969231" />
+                                    <path class="svg-item" d="M2.63184 3.83594H10.0033" stroke="#20B1F9"
+                                        stroke-width="0.969231" />
+                                    <path class="svg-item" d="M2.63232 6.46143H9.95572" stroke="#20B1F9"
+                                        stroke-width="0.969231" />
+                                    <path class="svg-item" d="M2.63232 8.75256L7.21352 8.75262" stroke="#20B1F9"
+                                        stroke-width="0.969231" />
+                                    <circle class="svg-item" cx="12.5897" cy="11.9281" r="1.35719" fill="#20B1F9" />
+                                </svg>
                             </div>
                             <div class="text">
                                 <p class="desc-1">Read Our Blog</p>
@@ -160,10 +183,11 @@
                                 <img src="/assets/img/step-1.svg" alt="step-1">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Step 1</h2>
+                                <h2 class="title-h2 white">Step 1</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">A developer writes a secret contract and deploys it to the Enigma
+                                <p class="desc-1 light">A developer writes a secret contract and deploys it to the
+                                    Enigma
                                     Network. This means more value and more opportunity.
                                 </p>
                             </div>
@@ -173,10 +197,11 @@
                                 <img src="/assets/img/step-2.svg" alt="step-2">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Step 2</h2>
+                                <h2 class="title-h2 white">Step 2</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">Users submit encrypted data to Enigma that can’t be read by anyone
+                                <p class="desc-1 light">Users submit encrypted data to Enigma that can’t be read by
+                                    anyone
                                     else — including the node doing the computation.
                                 </p>
                             </div>
@@ -186,10 +211,10 @@
                                 <img src="/assets/img/step-3.svg" alt="step-3">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Step 3</h2>
+                                <h2 class="title-h2 white">Step 3</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">An Enigma node performs the computation, and returns the result
+                                <p class="desc-1 light">An Enigma node performs the computation, and returns the result
                                     (either directly to the user, or to any Ethereum smart contract).
                                 </p>
                             </div>
@@ -199,10 +224,11 @@
                                 <img src="/assets/img/step-4.svg" alt="step-4">
                             </div>
                             <div class="item-title">
-                                <h2 class="title-h2">Step 4</h2>
+                                <h2 class="title-h2 white">Step 4</h2>
                             </div>
                             <div class="item-description">
-                                <p class="desc-1">The work is verified as correct, and payment is released in ENG to the
+                                <p class="desc-1 light">The work is verified as correct, and payment is released in ENG
+                                    to the
                                     Enigma node that performed the work.
                                 </p>
                             </div>
@@ -212,16 +238,17 @@
                 <div class="content-wrap-call">
                     <div class="content-wrap">
                         <div class="title">
-                            <h2 class="title-h1">Enigma builds solutions</h2>
+                            <h2 class="title-h1 white">Enigma builds solutions</h2>
                         </div>
                         <div class="description">
-                            <p class="desc-1">Enigma’s protocol helps solve all these challenges by moving computations
+                            <p class="desc-1 light">Enigma’s protocol helps solve all these challenges by moving
+                                computations
                                 to a decentralized off-chain network that keeps data encrypted and secure. This means
                                 more value, more opportunity, and more usability. Here’s how Enigma works.
                             </p>
                         </div>
                         <div class="button-wrap">
-                            <a class="btn btn-fill" href="#">
+                            <a class="btn btn-fill-white" href="#">
                                 <div class="icon">
                                     <img src="/assets/img/play.svg" alt="play">
                                 </div>
@@ -229,7 +256,7 @@
                                     <p class="desc-1">Try Enigma</p>
                                 </div>
                             </a>
-                            <a class="btn btn-border" href="#">
+                            <a class="btn btn-border-white" href="#">
                                 <div class="icon">
                                     <img src="/assets/img/doc.svg" alt="doc">
                                 </div>
@@ -242,8 +269,75 @@
                 </div>
             </div>
         </section>
-        <section class="community"></section>
+        <section class="community">
+            <div class="container">
+                <div class="visual">
+                    <img src="/assets/img/Group12.svg" alt="Group12">
+                </div>
+                <div class="content-wrap-call">
+                    <div class="content-wrap">
+                        <div class="title">
+                            <h2 class="title-h1 white">Who are we?</h2>
+                        </div>
+                        <div class="description">
+                            <p class="desc-1 light">The Enigma team and community are builders, researchers, explorers,
+                                and
+                                pioneers dedicated to growing global adoption of decentralized technologies. Join us.
+                            </p>
+                        </div>
+                        <div class="button-wrap">
+                            <a class="btn btn-fill-white" href="#">
+                                <div class="icon">
+                                    <img src="/assets/img/Group38.svg" alt="Group38">
+                                </div>
+                                <div class="text">
+                                    <p class="desc-1">Our Team</p>
+                                </div>
+                            </a>
+                            <a class="btn btn-border-white" href="#">
+                                <div class="icon">
+                                    <img src="/assets/img/Frame39.svg" alt="Frame39">
+                                </div>
+                                <div class="text">
+                                    <p class="desc-1">Our Community</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
+    <section class="subscribe-section">
+        <div class="container">
+            <div class="title-wrap">
+                <h2 class="title-h1">Subscribe to Our Newsletter</h2>
+            </div>
+            <div class="input-wrap">
+                <div class="input">
+                    <input type="email">
+                    <div class="placeholder">
+                        <p class="desc-1">Your E-mail</p>
+                    </div>
+                    <div class="icon">
+                        <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.8" clip-path="url(#clip0_849_19619)">
+                                <rect x="0.535156" y="1.01709" width="12.9284" height="9.76103" stroke="#3271AC" />
+                                <path d="M0.724609 1.25101L6.9375 6.08347L13.4018 1" stroke="#3271AC" />
+                                <path d="M6.05762 5.45557L0.597656 10.6646" stroke="#3271AC" />
+                                <path d="M8.00488 5.45557L13.4648 10.6646" stroke="#3271AC" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_849_19619">
+                                    <rect width="14" height="12" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 @require('./common/footer.ejs')
