--- a/app/styles/common/typography.sass
+++ b/app/styles/common/typography.sass
@@ -70,3 +70,7 @@ article, footer, header, nav, section
 		@include desc-1
 	&.desc-1-leng
 		@include desc-1-leng
+	&.white
+		color: #FFFFFF
+	&.light
+		color: var(--color-sec-light)
