--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -93,18 +93,39 @@ section
     padding: gem(14) gem(30)
     align-items: center
     &-border
+        transition: all 0.5s
         border: gem(1) solid var(--color-main-accent-opacity50)
         .desc-1
             color: var(--color-main-accent)
+            transition: all 0.5s
+        .svg-item
+            transition: all 0.5s
+        &:hover
+            border: gem(1) solid var(--color-sec-accent)
+            .desc-1
+                color: var(--color-sec-accent)
+            .svg-item
+                stroke: var(--color-sec-accent)
+
+        &-white
+            border: gem(1) solid #FFFFFF
+            .desc-1
+                color: #FFFFFF
     &-fill
         background-color: #20B1F9
         .desc-1
             color: var(--color-main-light)
+        &-white
+            background-color: #FFFFFF
+            .desc-1
+                color: #20B1F9
+
     .icon
         width: gem(14)
         height: gem(14)
         margin-right: gem(10)
-        img
+        img,
+        svg
             display: block
             width: 100%
             height: 100%
