--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -22,7 +22,26 @@
                 <div class="aside-left">
                     <a class="btn btn-fill" href="#">
                         <div class="icon">
-                            <img src="/assets/img/Frame 1.png" alt="Frame 1">
+                            <svg width="14" height="15" viewBox="0 0 14 15" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <ellipse class="svg-item" cx="6.09112" cy="6.27842" rx="6.09112" ry="6.27842"
+                                    transform="matrix(-0.822685 0.568497 -0.554023 -0.832502 15.7131 9.5921)"
+                                    stroke="white" stroke-width="0.9" stroke-linejoin="round" />
+                                <ellipse class="svg-item" cx="3.6428" cy="3.75481" rx="3.6428" ry="3.75481"
+                                    transform="matrix(-0.822685 0.568497 -0.554023 -0.832502 12.3007 8.883)"
+                                    stroke="white" stroke-width="0.9" stroke-linejoin="round" />
+                                <ellipse class="svg-item" cx="1.21729" cy="1.25472" rx="1.21729" ry="1.25472"
+                                    transform="matrix(-0.822685 0.568497 -0.554023 -0.832502 8.92018 8.1803)"
+                                    stroke="white" stroke-width="0.9" stroke-linejoin="round" />
+                                <path class="svg-item"
+                                    d="M5.6342 5.6696L2.7316 1.5451L5.32829 0.269521L7.18402 5.00358L5.6342 5.6696Z"
+                                    fill="#20B1F9" />
+                                <path class="svg-item" d="M3.56619 2.53479L6.51054 6.79563" stroke="white"
+                                    stroke-width="0.9" stroke-linejoin="round" />
+                                <ellipse class="svg-item" cx="0.53787" cy="0.554409" rx="0.53787" ry="0.554409"
+                                    transform="matrix(-0.822685 0.568497 -0.554023 -0.832502 4.40451 2.8194)"
+                                    stroke="white" stroke-width="0.9" stroke-linejoin="round" />
+                            </svg>
                         </div>
                         <div class="text">
                             <p class="desc-1">Learn the Basics</p>
@@ -139,7 +158,21 @@
                     <div class="button-wrap">
                         <a class="btn btn-fill" href="#">
                             <div class="icon">
-                                <img src="/assets/img/Frame2.svg" alt="Frame2">
+                                <svg width="15" height="14" viewBox="0 0 15 14" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path class="svg-item"
+                                        d="M3.54941 10.6293L7.52545 12.9215L11.47 10.5539V6.08621L7.51131 3.78638L3.54941 6.04498V10.6293Z"
+                                        stroke="white" stroke-width="0.84" stroke-linejoin="round" />
+                                    <ellipse class="svg-item" cx="0.868587" cy="0.895296" rx="0.868587" ry="0.895296"
+                                        transform="matrix(-0.96359 0.267383 -0.250491 -0.968119 2.52002 12.981)"
+                                        stroke="white" stroke-width="0.84" stroke-linejoin="round" />
+                                    <ellipse class="svg-item" cx="0.868587" cy="0.895296" rx="0.868587" ry="0.895296"
+                                        transform="matrix(-0.96359 0.267383 -0.250491 -0.968119 8.51825 2.11194)"
+                                        stroke="white" stroke-width="0.84" stroke-linejoin="round" />
+                                    <ellipse class="svg-item" cx="0.868587" cy="0.895296" rx="0.868587" ry="0.895296"
+                                        transform="matrix(-0.96359 0.267383 -0.250491 -0.968119 14.54 12.9805)"
+                                        stroke="white" stroke-width="0.84" stroke-linejoin="round" />
+                                </svg>
                             </div>
                             <div class="text">
                                 <p class="desc-1">Why Enigma?</p>
@@ -250,7 +283,14 @@
                         <div class="button-wrap">
                             <a class="btn btn-fill-white" href="#">
                                 <div class="icon">
-                                    <img src="/assets/img/play.svg" alt="play">
+                                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path class="svg-item"
+                                            d="M5.84595 8.55489V5.46399L8.90203 7.11625L5.84595 8.55489Z"
+                                            stroke="#20B1F9" stroke-width="0.84" />
+                                        <circle class="svg-item" cx="6.96265" cy="7.00916" r="6.53333" stroke="#20B1F9"
+                                            stroke-width="0.84" />
+                                    </svg>
                                 </div>
                                 <div class="text">
                                     <p class="desc-1">Try Enigma</p>
@@ -258,7 +298,20 @@
                             </a>
                             <a class="btn btn-border-white" href="#">
                                 <div class="icon">
-                                    <img src="/assets/img/doc.svg" alt="doc">
+                                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path class="svg-item"
+                                            d="M10.0315 0.438704L0.438659 0.438704L0.43866 13.5054L13.5053 13.5054L13.5053 3.93593M10.0315 0.438704L13.5053 3.93593M10.0315 0.438704L10.0315 3.88451L13.5053 3.93593"
+                                            stroke="white" stroke-width="0.84" />
+                                        <path class="svg-item" d="M2.74649 6.02319H11.0225" stroke="white"
+                                            stroke-width="0.84" />
+                                        <path class="svg-item" d="M2.74649 3.64575H6.97707" stroke="white"
+                                            stroke-width="0.84" />
+                                        <path class="svg-item" d="M2.74649 8.40076H10.9685" stroke="white"
+                                            stroke-width="0.84" />
+                                        <path class="svg-item" d="M2.74649 10.71L7.88984 10.71" stroke="white"
+                                            stroke-width="0.84" />
+                                    </svg>
                                 </div>
                                 <div class="text">
                                     <p class="desc-1">Documentation</p>
@@ -288,7 +341,24 @@
                         <div class="button-wrap">
                             <a class="btn btn-fill-white" href="#">
                                 <div class="icon">
-                                    <img src="/assets/img/Group38.svg" alt="Group38">
+                                    <svg width="19" height="14" viewBox="0 0 19 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path class="svg-item"
+                                            d="M12.1649 6.45435C12.1649 6.45435 11.4103 5.01154 9.57602 5.01147C7.74174 5.01141 6.75305 6.54486 6.75305 6.54486"
+                                            stroke="#20B1F9" stroke-width="0.7875" />
+                                        <ellipse class="svg-item" cx="9.57517" cy="2.17343" rx="1.33299" ry="1.33139"
+                                            stroke="#20B1F9" stroke-width="0.7875" />
+                                        <path class="svg-item"
+                                            d="M6.192 13.0663C6.192 13.0663 5.15631 11.5416 3.32203 11.5415C1.48776 11.5414 0.452393 13.0925 0.452393 13.0925"
+                                            stroke="#20B1F9" stroke-width="0.7875" />
+                                        <ellipse class="svg-item" cx="3.27457" cy="8.7208" rx="1.33299" ry="1.33139"
+                                            stroke="#20B1F9" stroke-width="0.7875" />
+                                        <path class="svg-item"
+                                            d="M18.2322 13.0663C18.2322 13.0663 17.1965 11.5416 15.3623 11.5415C13.528 11.5414 12.4926 13.0925 12.4926 13.0925"
+                                            stroke="#20B1F9" stroke-width="0.7875" />
+                                        <ellipse class="svg-item" cx="15.3148" cy="8.7208" rx="1.33299" ry="1.33139"
+                                            stroke="#20B1F9" stroke-width="0.7875" />
+                                    </svg>
                                 </div>
                                 <div class="text">
                                     <p class="desc-1">Our Team</p>
@@ -296,7 +366,32 @@
                             </a>
                             <a class="btn btn-border-white" href="#">
                                 <div class="icon">
-                                    <img src="/assets/img/Frame39.svg" alt="Frame39">
+                                    <svg width="16" height="14" viewBox="0 0 16 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <ellipse class="svg-item" cx="1.02521" cy="1.02399" rx="1.02521" ry="1.02399"
+                                            transform="matrix(1 0 0 -1 1 3.04834)" stroke="white"
+                                            stroke-width="0.7875" />
+                                        <path class="svg-item" d="M2.97323 2.69997L4.48179 3.93701" stroke="white"
+                                            stroke-width="0.7875" />
+                                        <ellipse class="svg-item" cx="14.0805" cy="2.02387" rx="1.02521" ry="1.02399"
+                                            transform="rotate(180 14.0805 2.02387)" stroke="white"
+                                            stroke-width="0.7875" />
+                                        <path class="svg-item" d="M13.1324 2.69948L11.6239 3.93652" stroke="white"
+                                            stroke-width="0.7875" />
+                                        <ellipse class="svg-item" cx="2.02521" cy="12.2259" rx="1.02521" ry="1.02399"
+                                            stroke="white" stroke-width="0.7875" />
+                                        <path class="svg-item" d="M2.97323 11.5503L4.48179 10.3132" stroke="white"
+                                            stroke-width="0.7875" />
+                                        <ellipse class="svg-item" cx="1.02521" cy="1.02399" rx="1.02521" ry="1.02399"
+                                            transform="matrix(-1 0 0 1 15.1057 11.2024)" stroke="white"
+                                            stroke-width="0.7875" />
+                                        <path class="svg-item" d="M13.1324 11.5508L11.6239 10.3137" stroke="white"
+                                            stroke-width="0.7875" />
+                                        <ellipse class="svg-item" cx="8.20644" cy="7.12507" rx="1.23787" ry="1.23639"
+                                            fill="white" />
+                                        <ellipse class="svg-item" cx="8.2063" cy="7.12485" rx="3.19214" ry="3.18833"
+                                            stroke="white" stroke-width="0.7875" />
+                                    </svg>
                                 </div>
                                 <div class="text">
                                     <p class="desc-1">Our Community</p>
