--- a/app/html/common/footer.ejs
+++ b/app/html/common/footer.ejs
@@ -1,7 +1,18 @@
-
 <footer class="footer">
+    <div class="container">
+        <div class="logo-wrap">
+            <div class="icon">
+                <img src="/assets/img/final-horizontal-black-tor.png" alt="final-horizontal-black-tor">
+            </div>
+            <div class="text">
+                <p class="desc-1">© 2019 Enigma</p>
+            </div>
+        </div>
+        <div class="link-wrap">
+            <a class="link desc-1" href="#">Second Link</a>
+            <a class="link desc-1" href="#">Privacy Policy</a>
+        </div>
+    </div>
 
-    <!-- footer markup here -->
 
 </footer>
-
