--- a/app/html/index.ejs
+++ b/app/html/index.ejs
@@ -191,7 +191,7 @@
                                         stroke-width="0.969231" />
                                     <path class="svg-item" d="M2.63232 8.75256L7.21352 8.75262" stroke="#20B1F9"
                                         stroke-width="0.969231" />
-                                    <circle class="svg-item" cx="12.5897" cy="11.9281" r="1.35719" fill="#20B1F9" />
+                                    <circle class="svg-item" cx="12.5897" cy="11.9281" r="1.35719" stroke="#20B1F9" />
                                 </svg>
                             </div>
                             <div class="text">
@@ -409,27 +409,27 @@
                 <h2 class="title-h1">Subscribe to Our Newsletter</h2>
             </div>
             <div class="input-wrap">
-                <div class="input">
-                    <input type="email">
-                    <div class="placeholder">
-                        <p class="desc-1">Your E-mail</p>
+                <form action="">
+                    <div class="input">
+                        <input type="email" class="input-email" placeholder="Your E-mail">
+                        <div class="icon">
+                            <svg width="14" height="12" viewBox="0 0 14 12" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g opacity="0.8" clip-path="url(#clip0_849_19619)">
+                                    <rect x="0.535156" y="1.01709" width="12.9284" height="9.76103" stroke="#3271AC" />
+                                    <path d="M0.724609 1.25101L6.9375 6.08347L13.4018 1" stroke="#3271AC" />
+                                    <path d="M6.05762 5.45557L0.597656 10.6646" stroke="#3271AC" />
+                                    <path d="M8.00488 5.45557L13.4648 10.6646" stroke="#3271AC" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_849_19619">
+                                        <rect width="14" height="12" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </div>
                     </div>
-                    <div class="icon">
-                        <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g opacity="0.8" clip-path="url(#clip0_849_19619)">
-                                <rect x="0.535156" y="1.01709" width="12.9284" height="9.76103" stroke="#3271AC" />
-                                <path d="M0.724609 1.25101L6.9375 6.08347L13.4018 1" stroke="#3271AC" />
-                                <path d="M6.05762 5.45557L0.597656 10.6646" stroke="#3271AC" />
-                                <path d="M8.00488 5.45557L13.4648 10.6646" stroke="#3271AC" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_849_19619">
-                                    <rect width="14" height="12" fill="white" />
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </div>
-                </div>
+                </form>
             </div>
         </div>
     </section>
