--- a/app/styles/common/header.sass
+++ b/app/styles/common/header.sass
@@ -17,6 +17,8 @@
             height: gem(40)
             img
                 display: block
+                width: 100%
+                height: 100%
         .header-nav
             padding-left: gem(92)
             .nav-list
