--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -194,3 +194,10 @@
                     display: block
                     width: 100%
                     height: 100%
+
+@media all and (max-width: 1024px)
+    .hero
+        .cub
+            width: gem(384)
+            height: gem(445)
+            top: gem(474)
