--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -197,6 +197,12 @@
 
 @media all and (max-width: 1024px)
     .hero
+        .container
+            padding: gem(200) gem(254) gem(346) gem(64)
+            .content-wrap
+                .title-wrap
+                    .title-h1
+                        font-size: gem(36)
         .cub
             width: gem(384)
             height: gem(445)
