--- a/app/styles/common/header.sass
+++ b/app/styles/common/header.sass
@@ -90,3 +90,8 @@
                         display: block
                         width: 100%
                         height: 100%
+
+@media all and (max-width: 1024px)
+    .header
+        &-container
+            width: gem(640)
