--- a/app/styles/common/header.sass
+++ b/app/styles/common/header.sass
@@ -94,4 +94,6 @@
 @media all and (max-width: 1024px)
     .header
         &-container
+            padding: gem(40) gem(64) 0 gem(64)
+        &-content
             width: gem(640)
