--- a/app/styles/home.sass
+++ b/app/styles/home.sass
@@ -207,3 +207,6 @@
             width: gem(384)
             height: gem(445)
             top: gem(474)
+        .play-btn-wrap
+            bottom: gem(158)
+            left: gem(64)
